[gd_scene load_steps=4 format=2]

[ext_resource path="res://Graphics/Explosion.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ExplosionScripts.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Explosion" type="Sprite"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
vframes = 5
hframes = 7
frame = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 1 )

[node name="CheckWall1" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 8, 0 )
collision_mask = 4

[node name="CheckWall2" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 4

[node name="CheckWall3" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -8, 0 )
collision_mask = 4

[node name="CheckWall4" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -8 )
collision_mask = 4

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
